# simple_chain_ik

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml  qb_legs_params.yaml
include/: my_chainiksolvervel_wdls.hpp
include/qb_legs/: qb_legs_ik.h
include/simple_chain_ik/: chain_and_solvers.h  simple_chain_ik_solver.h
include/simple_chain_ik/solvers/: chainiksolverpos_relaxed.hpp  chainiksolvervel_MT_FP_JL.hpp  my_eigen_indexing.h
launch/: qb_legs.launch  vito.launch
model/: qb_legs.urdf.xacro  qb_legs_robot.urdf.xacro  qb_utility_models.urdf.xacro
my_kdl/: CMakeLists.txt  my_chainiksolvervel_wdls.cpp
src/: chain_and_solvers.cpp  chainiksolverpos_relaxed.cpp  chainiksolvervel_MT_FP_JL.cpp  qb_legs_ik.cpp  qb_legs_node.cpp  simple_chain_ik_node.cpp  simple_chain_ik_solver.cpp
srv/: qb_legs_srv.srv
test/: CMakeLists.txt  chain_and_solvers_test_using_vito.cpp  eigen_indexig_test.cpp  qb_legs_ik_test.cpp  simple_chain_ik_test.cpp
